Update index.html with correct references

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>ArbsStudio Deployment</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ArbsStudio</title>
+    <link rel="stylesheet" href="build/assets/app-DnBMerro.css">
+</head>
+<body>
+    <h1>Welcome to ArbsStudio</h1>
+    <p>This is the homepage of our Laravel-powered website.</p>
+    <script src="build/assets/app-BwvWHta4.js"></script>
+</body>
+</html>
+
